--- a/target.config
+++ b/target.config
@@ -11,23 +11,23 @@
     /* - linux   : accessed via SSH connection                    */
     /* - android : accessed via ADB connection                    */
     /* - host    : run on the local host                          */
-    "platform" : "linux",
+    "platform" : "android",
 
     /* Board */
     /* Currently supported boards are:                            */
     /*  juno  : target is a JUNO board                            */
     /*  tc2   : target is a TC2 board                             */
     /* Leave commented if your board is not listed above          */
-    "board" : "juno",
+    "board" : " ",
 
     /* Target IP or MAC address */
-    "host" : "192.168.0.20",
+   // "host" : "192.168.0.20",
 
     /* Target Android device ID */
-    //"device" : "00b1346f0878ccb1",
+     "device" : "741347ed",
 
     /* Login username (has to be sudo enabled) */
-    "username" : "root",
+   // "username" : "root",
 
     /* Login credentials */
     /* You can specify either a password or keyfile */
